--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@ table {
 
 /*_______________________minwidth1016pxmaxwidth3200px__________*/
 @media only screen and (min-width: 1016px) and (max-width: 3200px){
-  #actiontablet, #dropnavmobile, #hamburger, #tripsII {
+  #actiontablet, #dropnavmobile, #hamburger, #tripsII, #mobilefooter {
     display:none;
   }
 }
 
 /*_______________________minwidth721pxmaxwidth1015px__________*/
 @media only screen and (min-width: 721px) and (max-width: 1015px){
-    #dropbtn, #title, .navbarright, #tripsII {
+    #title, .navbarright, #tripsII, #mobilefooter, #hamburger, #about {
       display: none;
     }
     header {
@@ -95,38 +95,42 @@ table {
     #actiontablet {
       display: none;
     }
-  
+ 
 }
 /*_______________________maxwidth721px__________*/
 @media only screen and (max-width: 721px){
   header {
-    
-    
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url(champlainfishingguides/champlainlogo.svg);
+    background-color:#B84300;
     
   }
-  #dropbtn, #title, #animationone, .navbarright, #trips {
+  #dropbtn, #title, #animationone, .navbarright, #trips, #featuredacc, #desktopfoot, #actionOnetab a, #about {
     display: none;
+  }
+  
+  #gal {
+    margin-top: 50px;
+    z-index: -1;
   }
   #gal .container .btn {
     padding: 15px 20px;
     font-size: 18px;
   }
+
   #action.actioncolumn{
     display: none;
   }
+
   .actionrowtab {
-    width: 80%;
+    width: 90%;
     height: 350px;
-    margin: 0px 10%;
+    margin: 10px 5%;
   }
   #actionOnetab {
     background-image: url('champlainfishingguides/beggsparkessexny.png');
     background-size: cover;
     background-position: center;
   }
+
   #actionTwotab {
     background-image: url('champlainfishingguides/beggspark02.png');
     background-size: cover;
@@ -306,7 +310,7 @@ p {
 }
 header {
   width: 90%;
-  height: 100px;
+  height: 235px;
   margin: 0 5%;
   color: #ffffff;
   background-color: #003333;
@@ -335,17 +339,54 @@ button {
   transition: 0.4s;
 }
 
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+/*________--__-----_--_-_-_---__-_-_-_--MobileNavigationMenu_______--__---_-_-_----_---_-_-----*/
+
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #336666;
+  position: relative;
 }
 
-.change .bar2 {opacity: 0;}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+  text-align: center;
 }
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  z-index: 10;
+}
+
+
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #B84300;
+
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #336666;
+  color: white;
+}
+#hamburger {
+    width: 60%;
+    margin: 0 20%;
+    text-align: center;
+  }
+  #myLinks {
+    z-index: 1;
+  }
+/*________--__-----_--_-_-_---__-_-_-_--MobileNavigationMenu_______--__---_-_-_----_---_-_-----*/
 
 /* Dropdown Button */
 
@@ -879,78 +920,41 @@ textarea {
   overflow: hidden;
   flex: 35%;
 }
+#abouttab {
+  overflow: hidden;
 
-/*_____________________________________myVideo______W3schools_________________________*/
-
-
-
-* {
-  box-sizing: border-box;
+  
 }
-
-#myVideo {
-  position: fixed;
-  right: 0;
-  top: 0;
-  min-width: 90%; 
-  min-height: 100%;
-
+#abouttab img {
+  display: block;
+  margin: 10px auto;
 }
-.content p {
-  width: 60%;
-  font-size: 24px;
-  padding: 3%;
+#aboutmobile {
+  width: 80%;
+  margin: 10px auto;
+  text-align: center;
+  background-color: #cc8843;
 }
-.content h1 {
-  padding: 3%;
+#aboutmobile h2{
+  padding:5%;
 }
-
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #ffffff;
-  width: 100%;
-  padding: 20px;
+#aboutmobile p{
+  padding: 5%;
 }
-
-#myBtn {
-  color: white;
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 200;
-  font-size: 36px;
-  letter-spacing: 2px;
-  width: 200px;
-  margin: 3%;
-  padding: 10px;
-  border: none;
-  background: #003333;
-  color: #fff;
-  cursor: pointer;
-}
-
-#myBtn:hover {
-  background: #ffffff;
-  color: #003333;
-}
-/*_____________________________________myVideo______W3schools__________________________*/
-
-
 
 /*-------------------------------------------------------------FOOTER__________----------_____________-----------*/
 
 footer {
   width: 100%;
-  height: 400px;
   overflow:hidden ;
   background-image: url(champlainfishingguides/champlainbridgeorg.png);
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #003333;
+  color: #ffffff;
 }
 
 footer a {
-  color: white;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -985,7 +989,7 @@ footer a {
 #links {
   width: 29%;
   padding: 5% 2% 5% 2%; 
-  color: white;
+  color: #003333;
   text-align: left;
 }
 
@@ -1020,7 +1024,7 @@ footer .row:after {
   margin-left: 2.5%;
   padding-top: 5%;
   padding-right: 2%;
-  color: white;
+  color: #ffffff;
   text-align: right;
   float: left;
 }
@@ -1038,7 +1042,7 @@ footer .row:after {
   color:#ffffff;
   font-weight: 200;
   border: none;
-  background-color: #669999;
+  background-color: #336666;
 }
 #social {
   
@@ -1049,7 +1053,39 @@ footer .row:after {
   display: inline-block;
 }
 
-
+/*___________---_---_---_--_--_-Footermax721___________----_---_---_---_---_-*/
+#mobilefooter {
+  color:#ffffff;
+  text-align: center;
+}
+#fishytab {
+  width: 80%;
+  height: auto;
+  padding: 5%;
+}
+#linkstab a{
+  width: 25%;
+  font-size: 20px;
+  padding: 2%;
+  display: block;
+  margin: 5px auto;
+}
+.mediatab {
+  padding: 5%;
+  display: inline-block;
+}
+#newslettertab p{
+  width: 20%;
+  margin: 10px 40%;
+  text-align: center;
+}
+#newslettertab button {
+  display: block;
+  font-size: 20px;
+  padding: 20px 25px;
+  margin: 10px 38.5%;
+}
+/*___________---_---_---_--_--_-Footermax721___________----_---_---_---_---_-*/
 
 
 
