--- a/style.css
+++ b/style.css
@@ -55,24 +55,17 @@ table {
 
 /*_______________________minwidth1016pxmaxwidth3200px__________*/
 @media only screen and (min-width: 1016px) and (max-width: 3200px){
-  #actiontablet, #dropnavmobile, #hamburger, #tripsII, #mobilefooter {
+  #actiontablet, #dropnavmobile, #hamburger, #tripsII, #tripsIII, #mobilefooter, #abouttab {
     display:none;
   }
 }
 
 /*_______________________minwidth721pxmaxwidth1015px__________*/
 @media only screen and (min-width: 721px) and (max-width: 1015px){
-    #title, .navbarright, #tripsII, #mobilefooter, #hamburger, #about {
+    #title, .navbarright, #trips, #tripsII, #mobilefooter, #about, #dropnav {
       display: none;
     }
-    header {
-    
-      margin-left: 25%;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-image: url(champlainfishingguides/champlainlogo.svg);
-      
-    }
+
     #contact h2 {
         font-size: 30px;
     }
@@ -99,11 +92,8 @@ table {
 }
 /*_______________________maxwidth721px__________*/
 @media only screen and (max-width: 721px){
-  header {
-    background-color:#B84300;
-    
-  }
-  #dropbtn, #title, #animationone, .navbarright, #trips, #featuredacc, #desktopfoot, #actionOnetab a, #about {
+
+  #dropbtn, #title, #animationone, .navbarright, #trips, #featuredacc, #desktopfoot, #about, #tripsIII {
     display: none;
   }
   
@@ -129,6 +119,7 @@ table {
     background-image: url('champlainfishingguides/beggsparkessexny.png');
     background-size: cover;
     background-position: center;
+    
   }
 
   #actionTwotab {
@@ -185,27 +176,7 @@ table {
   #gallalink h3 {
     font-size: 15px;
   }
-  #tripsII {
-    width: 90%;
-    margin: 5%;
-    text-align: center;
-    background-color: #ffffff;
-  }
-  #tripsII h2 {
-    padding: 5%;
-    text-align: center;
-  }
-  .triprowII h3 {
-    padding:2%;
-  }
-  .triprowII {
-    padding: 5%;
-    margin: 5%;
-    background-color: #cc8843;
-  }
-  .tripparagraphsII {
-    padding: 5%;
-  }
+
   }
 
 
@@ -310,7 +281,7 @@ p {
 }
 header {
   width: 90%;
-  height: 235px;
+  height: auto;
   margin: 0 5%;
   color: #ffffff;
   background-color: #003333;
@@ -379,8 +350,8 @@ button {
   color: white;
 }
 #hamburger {
-    width: 60%;
-    margin: 0 20%;
+    width: 50%;
+    margin: 0 25%;
     text-align: center;
   }
   #myLinks {
@@ -879,6 +850,63 @@ textarea {
 }
 .tripparagraphs {
   padding: 10%;
+}  
+/*__________________________FeaturedTripsForMobile________________________*/
+#tripsII {
+    width: 90%;
+    margin: 5%;
+    text-align: center;
+    background-color: #B84300;
+  }
+  #tripsII h2 {
+    padding: 5%;
+    text-align: center;
+    
+  }
+  .triprowII h3 {
+    padding:2%;
+    color: #ffffff;
+  }
+  .triprowII {
+    padding: 5%;
+    margin: 5%;
+    background-color: #cc8843;
+  }
+  .tripparagraphsII {
+    padding: 5%;
+    background-color: #ffffff;
+  }
+/*____________________________FeaturedTripsForTablet__________________*/  
+#tripsIII {
+  width: 80%;
+  height: auto;
+  margin: 10% 10%;
+  text-align: center;
+  background-color: #ffffff;
+} 
+.titleIII {
+  padding:5% 5%;
+  padding-right: 5%;
+} 
+.tripcolumnIII {
+  background-color: #ffffff;
+}
+.triprowIII {
+  width: 50%;
+  height: auto;
+  padding: 5%;
+  overflow: hidden;
+  background-color: #ffffff;
+  float: left;
+
+}
+.triprowIII img {
+  margin: 0 5%;
+}
+.tripparagraphsIII {
+  width: 80%;
+  margin:10%;
+  text-align: center;
 }
 /*____________________________________________Featured_Trips______________________________________*/
 
@@ -989,7 +1017,6 @@ footer a {
 #links {
   width: 29%;
   padding: 5% 2% 5% 2%; 
-  color: #003333;
   text-align: left;
 }
 
@@ -1082,8 +1109,9 @@ footer .row:after {
 #newslettertab button {
   display: block;
   font-size: 20px;
-  padding: 20px 25px;
-  margin: 10px 38.5%;
+  padding: 2% 3%;
+  border: 1% solid #336666;
+  margin: 10px 40%;
 }
 /*___________---_---_---_--_--_-Footermax721___________----_---_---_---_---_-*/
 
