--- a/style.css
+++ b/style.css
@@ -361,6 +361,10 @@ button {
   #myLinks {
     z-index: 1;
   }
+  #myLinks a {
+    font-weight: 300;
+    font-size: 30px;
+  }
 /*________--__-----_--_-_-_---__-_-_-_--MobileNavigationMenu_______--__---_-_-_----_---_-_-----*/
 
 /* Dropdown Button */
@@ -620,16 +624,16 @@ nav a:hover {
     
   }
   .panelimage {
-    width: 50%;
-    padding: 5%;
+  
+    margin:3%;
     float: left;
-    overflow: hidden;
-    background-position: center;
+    
+   
 
   }
   .panelp {
-      width: 30%;
-      margin: 15% 10% 0 10%; 
+      width: 40%;
+      margin: 3%; 
       padding: 2%;
       float: right;
       background-color: #ffffff;
